--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ https://templatemo.com/tm-555-upright
                     </button>
                     <div>
                         <div class="tm-brand-box">
-                            <h1 class="tm-brand">Priority Inbox</h1>
+                            <h1 class="tm-brand">Chat Bot</h1>
                         </div>                
                         <ul id="tm-main-nav">
                             <li class="nav-item">                                
@@ -82,7 +82,7 @@ https://templatemo.com/tm-555-upright
                 <div class="tm-section-wrap">
                     <div class="tm-parallax" data-parallax="scroll" data-image-src="img/img-01.jpg"></div>                   
                     <section id="home" class="tm-section">
-                        <h2 class="tm-text-primary">Welcome to Priority Inbox</h2>
+                        <h2 class="tm-text-primary">Welcome to ChatBot</h2>
                         <hr class="mb-5">
                         <div class="row">
                             <div class="col-lg-6 tm-col-home mb-4">
@@ -91,7 +91,7 @@ https://templatemo.com/tm-555-upright
                                         <i class="fas fa-satellite-dish fa-4x tm-text-primary"></i>
                                     </div>                                
                                     <p>
-                                        Priority Inbox is a message saving tool for users in which the user can arrange the task 
+                                        ChatBot is a message saving tool for users in which the user can arrange the task 
                                         according to their Priority order . User can limit the number of messages a/c to his/her needs.
                                     </p>
                                     <p>
